--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "GPL-2.0-or-later",
     "authors": [
         {
-            "name": "AL",
+            "name": "Andreas Lagerkvist",
             "email": "powerbuoy@gmail.com"
         }
     ],
