--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "powerbuoy/sleek-core",
+    "description": "Adds a bunch of theme support, includes translation files, enqueues scripts etc etc.",
     "license": "GPL-2.0-or-later",
     "authors": [
         {
